+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.

Changes in ATK 5.4.1
--------------------
+ Added flag AF_RELATION_NO_NULL_ITEM for atkManyToOneRelation to hide the
  select_none option. [Dennis]
+ Added flag AF_MANYBOOLRELATION_ADDLINK to atkManyBoolRelation. [Guido]
* Replaced numerous deprecated text() calls with atktext(). [Guido]
* Fixed numerous php notices. [Guido]
* Fixed PHP pre-4.2.x support by not using the session_cache_expire function
  if not present. [Guido]
* Moved the modifier calling functionallity as much as possible to atkModule.
  This enables you to implement a generic modifier in a module that can
  handle any node from any module. [Ivo, Guido]
* Fixed bug in the search functionality of the atkManyBoolRelation. [Stefano]
* Passed along atkprevlevel to debugger window so the stack doesn't get forked
  causing the console to draw a blank. [Boy]
* If no link_select_node translation is found atkManyToOneRelation tries
  translation of select_a and node. [Boy]
* If extended searching is called directly the resultlist is nested
  in the session so after editting we return to the results, not the search
  page. [Boy]
  

Changes in ATK 5.4
------------------
+ Significantly enhanced the CSV export feature (atkExportHandler) (bug #603):
  + The user can now select which columns to export. [Stefano]
  + Attributes which are hidden in the list can be exported now. [Stefano]
  + Configurable delimiter and enclosure. [Stefano]
  * The default export filename is now export_[node name].csv. [Stefano]
  * If the recordlist was filtered by searchcriteria, only those records
    listed are displayed. [Stefano]
  * Records in export are now sorted according to the selected order from
    the recordlist. [Stefano]
  * Fixed some translations. [Ivo]